fix: text underline styles should work on ios

--- a/app/components/FloatingActionButton.module.css
+++ b/app/components/FloatingActionButton.module.css
@@ -4,6 +4,7 @@
   border: none;
   border-radius: 16px;
   cursor: pointer;
+  color: inherit;
   display: flex;
   height: 56px;
   justify-content: center;
